--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,58 +1,20 @@
-#Demo Spring application
-parameters:
-- name: releaseName
-  type: string
-  displayName: 'Release Name'
-  default: Demo 
-- name: major
-  type: number
-  displayName: 'Major version'
-  default: 1 
-- name: minor
-  type: number
-  displayName: 'Minor version'
-  default: 0 
+# Starter pipeline
+# Start with a minimal pipeline that you can customoze to build and deploy your code
+# Add steps that build, run tests, deploy, and more:
 
 trigger:
  branches:
-    include:
-      - master
-pr:
-  branches:
     include:
       - master
 
 pool:
   vmImage: ubuntu-latest
 
-stages:
-  - stage: 'BuildBranchName'
-    displayName: 'Build Branch Name'
-    jobs:
-      - job: 'BranchName'
-        variables:
-          buildName: ${{parameters.releaseName}}
-          majorVersion: ${{parameters.major}}
-          minorVersion: ${{parameters.minor}}
-          branchPRNumber: $[counter(variables['System.PullRequest.PullRequestId'], 0)]
-          branchBuildNumber: $[counter(variables['Build.SourceBranch'], 0)]
-        displayName: 'BranchName'
-        steps:
-        - template: 'cicd/templates/buildBranchName.yml'
+steps:
+- script: echo Hello, World!
+  displayName: 'Run a one line script'
 
-  - stage: 'BuildArtifact'
-    displayName: ' Building Artifact'
-    jobs:
-      - job: 'BuildArtifact'
-        displayName: 'Building Artifact'
-        steps:
-        - template: 'cicd/templates/build.yml'
-
-  - stage: 'Dockerize'
-    displayName: 'Create Docker Image'
-    condition: and(succeeded(),ne(variables['Build.Reason'],'PullRequest'))
-    jobs:
-      - job: 'CreateDockerImage'
-        displayName: 'Build and Publish Docker Image'
-        steps:
-          - template: 'cicd/templates/dockerize.yml'
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo see https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
