--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,11 @@ trigger:
     include:
       - master
 
+pr:
+  branches:
+    include:
+      - master
+
 pool:
   vmImage: ubuntu-latest
 
@@ -33,3 +38,24 @@ stages:
               sonarQubeRunAnalysis: false
               checkStyleRunAnalysis: true
               pmdRunAnalysis: true
+
+  - stage: 'BuildArtifact'
+    displayName: 'BuildingArtifact'
+    jobs:
+      - job: 'BuildArtifact'
+        displayName: 'BuildingArtifact'
+        steps:
+          - task: Maven@4
+          - task: Maven@4
+            inputs:
+              azureSubscription: 'Azure subscription 1(6664a209-4f14-4fc3-92d7-597da7d890c4)'
+              mavenPomFile: 'pom.xml'
+              goals: 'Clean package'
+              options: '--no-transfer-progress'
+              publishJUnitResults: true
+              testResultsFiles: '**/surefire-reports/TEST-*.xml'
+              javaHomeOption: 'JDKVersion'
+              mavenVersionOption: 'Default'
+              mavenAuthenticateFeed: false
+              effectivePomSkip: false
+              sonarQubeRunAnalysis: false
