Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 # Demo spring application
 # Testing this after adding new branch
-# Pipeline Condition Test
+# Pipeline Condition Testing
 
 trigger:
  branches:
