--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,12 +5,12 @@
 trigger:
  branches:
     include:
-      - master
+      - main
 
 pr:
   branches:
     include:
-      - master
+      - main
 
 pool:
   vmImage: ubuntu-latest
