--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
         - task: CopyFiles@2
           inputs:
             SourceFolder: 'drop'
-            Contents: '*jar'
+            Contents: '*.jar'
             TargetFolder: '$(build.artifactstagingdirectory)/s/cicd/drop'
         - task: Docker@2
           inputs:
