--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,10 +67,10 @@ stages:
           inputs:
             SourceFolder: 'drop'
             Contents: '*.jar'
-            TargetFolder: '$(build.artifactstagingdirectory)/s/cicd/drop'
+            TargetFolder: '$(build.artifactstagingdirectory)/a/s/cicd/drop'
         - task: Docker@2
           inputs:
             containerRegistry: 'AzureDevOpsToken'
             repository: 'sunderraj/demo-app'
             command: 'buildAndPush'
-            Dockerfile: '$(build.artifactstagingdirectory)/s/cicd/Dockerfile'
+            Dockerfile: '$(build.artifactstagingdirectory)/a/s/cicd/Dockerfile'
