--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,4 +73,4 @@ stages:
             containerRegistry: 'AzureDevOpsToken'
             repository: 'sunderraj/demo-app'
             command: 'buildAndPush'
-            Dockerfile: '$(build.artifactstagingdirectory)/cicd/Dockerfile'
+            Dockerfile: '$(Build.SourcesDirectory)/cicd/Dockerfile'
