Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,6 @@ pool:
 stages:
   - stage: 'BuildArtifact'
     displayName: 'BuildingArtifact'
-    condition: and(succeeded(),ne(variables['Build.Reason'],'PullRequest'))
     jobs:
       - job: 'BuildArtifact'
         displayName: 'BuildingArtifact'
@@ -73,8 +72,4 @@ stages:
             containerRegistry: 'AzureDevOpsToken'
             repository: 'sunderraj/demo-app'
             command: 'buildAndPush'
-            Dockerfile: '$(build.artifactstagingdirectory)/s/cicd/drop/cicd/docker/DockerFile'
-            buildContext: '$(Build.ArtifactStagingDirectory)/s/cicd/drop'
-            tags: |
-              latest
-              $(Build.BuildId)
+            Dockerfile: '$(build.artifactstagingdirectory)/s/cicd/Dockerfile'
